# engie_test

./: .pre-commit-config.yaml  README.md  pyproject.toml  wsgi.py
core/: main.py
core/controllers/: __init__.py  core_api.py
core/tools/: logic.py
tests/: conftest.py  test_core.py
